数据库整合

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port=8080
+#server.servlet.context-path=/
+spring.profiles.active=dev
+spring.application.name=sparrow-simple
 
+# DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1/testDb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
+
+logging.file=./logs/${spring.application.name}-${logging.level.root}.log
+logging.file.max-history=0
+logging.file.max-size=10MB
+logging.level.root=INFO
+#logging.level.org.hibernate.SQL=DEBUG
+logging.pattern.dateformat=yyyy-MM-dd HH:mm:ss.SSS
+logging.pattern.file=%date %-5level [%thread] %logger{0} [%file:%line] - %msg%n
+logging.pattern.level=%5p
+logging.register-shutdown-hook=false
+
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.time-zone=GMT+8
