--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,7 @@ spring.profiles.active=dev
 spring.application.name=sparrow-simple
 
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1/testDb?useUnicode=true&characterEncoding=utf8&autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.file=./logs/${spring.application.name}-${logging.level.root}.log
 logging.file.max-history=0
@@ -21,3 +18,75 @@ logging.register-shutdown-hook=false
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #spring.jackson.time-zone=GMT+8
+
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
+
+#spring.cache.type=redis
+
+# THYMELEAF (ThymeleafAutoConfiguration)
+spring.thymeleaf.enabled=true
+spring.thymeleaf.enable-spring-el-compiler=false
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.reactive.max-chunk-size=0B
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.suffix=.html
+
+mybatis-plus.mapper-locations=classpath*:mapper/**/*Mapper.xml
+mybatis-plus.type-aliases-package=com.github.ionething.sparrow.domain
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.global-config.banner=false
+mybatis-plus.global-config.db-config.id-type=auto
+#mybatis-plus.global-config.db-config.table-prefix=
+
+spring.datasource.druid.initial-size=1
+spring.datasource.druid.max-active=20
+spring.datasource.druid.min-idle=1
+spring.datasource.druid.max-wait=60000
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=20
+#spring.datasource.druid.max-open-prepared-statements=
+#spring.datasource.druid.validation-query=
+#spring.datasource.druid.validation-query-timeout=
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.time-between-eviction-runs-millis=2000
+spring.datasource.druid.min-evictable-idle-time-millis=600000
+spring.datasource.druid.max-evictable-idle-time-millis=900000
+spring.datasource.druid.asyncInit=true
+spring.datasource.druid.filters=stat
+
+# WebStatFilter配置，说明请参考Druid Wiki，配置_配置WebStatFilter
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.web-stat-filter.url-pattern=
+spring.datasource.druid.web-stat-filter.exclusions=
+spring.datasource.druid.web-stat-filter.session-stat-enable=
+spring.datasource.druid.web-stat-filter.session-stat-max-count=
+spring.datasource.druid.web-stat-filter.principal-session-name=
+spring.datasource.druid.web-stat-filter.principal-cookie-name=
+spring.datasource.druid.web-stat-filter.profile-enable=
+
+# StatViewServlet配置，说明请参考Druid Wiki，配置_StatViewServlet配置
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
+# 允许清空统计数据
+spring.datasource.druid.stat-view-servlet.reset-enable=false
+#spring.datasource.druid.stat-view-servlet.login-username=admin
+#spring.datasource.druid.stat-view-servlet.login-password=123456
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1,192.168.0.0/24
+spring.datasource.druid.stat-view-servlet.deny=
+
+# Spring监控配置，说明请参考Druid Github Wiki，配置_Druid和Spring关联监控配置
+#spring.datasource.druid.aop-patterns= # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+# Spring Boot Admin Server
+spring.boot.admin.context-path=/boot-admin
+# Spring Boot Admin Client
+spring.boot.admin.client.url=http://127.0.0.1:${server.port}/boot-admin
+spring.boot.admin.client.instance.metadata.tags.environment=${spring.profiles.active}
