--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,15 @@ logging.register-shutdown-hook=false
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #spring.jackson.time-zone=GMT+8
 
-#spring.mvc.throw-exception-if-no-handler-found=true
 #spring.resources.add-mappings=false
 
 #spring.cache.type=redis
+
+# SPRING MVC (WebMvcProperties)
+spring.mvc.servlet.load-on-startup=-1
+spring.mvc.servlet.path=/
+spring.mvc.static-path-pattern=/**
+spring.mvc.throw-exception-if-no-handler-found=true
 
 # THYMELEAF (ThymeleafAutoConfiguration)
 spring.thymeleaf.enabled=true
